# GOLEM-3DMCP-Rhino-

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  glama.json  index.html  package-lock.json  package.json  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docker.yml  release.yml
docs/: ARCHITECTURE.md  PROTOCOL.md  TOOL_REFERENCE.md  TROUBLESHOOTING.md
mcp_server/: __main__.py  config.py  connection.py  protocol.py  server.py
mcp_server/models/: common.py  geometry.py  scene.py
mcp_server/tools/: __init__.py  creation.py  files.py  grasshopper.py  manipulation.py  operations.py  scene.py  scripting.py  surfaces.py  viewport.py
rhino_plugin/: dispatcher.py  protocol.py  server.py  startup.py
rhino_plugin/grasshopper/: gh_handlers.py  gh_server.py
rhino_plugin/handlers/: creation.py  files.py  grasshopper.py  manipulation.py  operations.py  scene.py  surfaces.py
rhino_plugin/utils/: error_handler.py  geometry_serializer.py  guid_registry.py  screenshot.py
scripts/: configure_claude.py  github-setup.sh  install_plugin.py  publish.sh  start_rhino_server.py  test_connection.py
src/golem_3dmcp/: __init__.py  __main__.py  cli.py  connection.py  protocol.py  server.py
src/golem_3dmcp/_rhino_plugin/: dispatcher.py  protocol.py  server.py  startup.py
src/golem_3dmcp/_rhino_plugin/grasshopper/: gh_handlers.py  gh_server.py
src/golem_3dmcp/_rhino_plugin/handlers/: __init__.py  creation.py  files.py  grasshopper.py  manipulation.py  operations.py  scene.py  scripting.py  surfaces.py  viewport.py
src/golem_3dmcp/_rhino_plugin/utils/: error_handler.py  geometry_serializer.py  guid_registry.py  screenshot.py
src/golem_3dmcp/models/: common.py  geometry.py  scene.py
src/golem_3dmcp/tools/: __init__.py  creation.py  files.py  grasshopper.py  manipulation.py  operations.py  scene.py  scripting.py  surfaces.py  viewport.py
tests/: conftest.py  test_connection.py  test_integration.py  test_models.py  test_protocol.py  test_tools_mock.py
